@@ -1,0 +1,9 @@
+OTEL_EXPORTER_OTLP_ENDPOINT=http://grafana-alloy:4317
+OTEL_SERVICE_NAME=planetary-crs-registry
+OTEL_TRACES_EXPORTER=otlp
+OTEL_METRICS_EXPORTER=none
+OTEL_LOGS_EXPORTER=otlp
+# Uncomment this to avoid sending ping/healtheck related requests to telemetry.
+# For "normal" conditions, ping report is mostly noise. However, if an attacker reach it, it can become valuable information.
+# OTEL_PYTHON_FASTAPI_EXCLUDED_URLS=/ping
+OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED=true
