@@ -1,4 +1,15 @@
-### feat(Compose): add a minimal compose configuration (HEAD -> feat/observability)
+### feat(Compose): Add observability stack (HEAD -> feat/observability)
+>Tue, 4 Jun 2024 18:31:27 +0200
+
+>Author: Alexis Manin (alexis.manin@geomatys.com)
+
+>Commiter: Alexis Manin (alexis.manin@geomatys.com)
+
+Add an observability configuration using Open Telemetry + Grafana to monitor application traces and logs
+
+
+
+### feat(Compose): add a minimal compose configuration
 >Tue, 4 Jun 2024 16:18:56 +0200
 
 >Author: Alexis Manin (alexis.manin@geomatys.com)
